--- a/css/index.css
+++ b/css/index.css
@@ -171,12 +171,14 @@ body{
 .Slider-arrow{
     width: 3rem;
     height: 3rem;
+    opacity: .5;
     position: absolute;
     top: calc( 50% - 1rem);
     
 }
 .Slider-arrow:hover{
     cursor: pointer;
+    opacity: 1;
     transform:scale(.95)
 
 }
