--- a/css/index.css
+++ b/css/index.css
@@ -346,13 +346,13 @@ body{
 .Services-btn{
     width: 100%;
     background-color: var(--bg-color);
+    padding: 1rem;
     cursor: pointer;
 }
 
 .Services-btn:hover{
     background-color: var(--bg-hover);
 }
-
 
 .Services-all{
     width: 100%;
