--- a/css/index.css
+++ b/css/index.css
@@ -150,6 +150,37 @@ body{
     color:var(--bg-color);
 }
 
+.Sublist-ul{
+    min-width: 10rem;
+    display: none;
+    background-color: var(--bg-color-second);
+    padding: 0;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1;
+}
+
+.Sublist-li{
+    background-color: transparent;
+    padding: 0.5rem 1rem; 
+    color: var(--color-secondary);
+    white-space: nowrap;
+    border-bottom: solid 1px var(--color-tertiary);
+    cursor: pointer;
+
+}
+
+.Sublist-li:hover{
+    background-color: var(--bg-hover);
+    color: var(--bg-color); 
+}
+
+.Header-li:hover  .Sublist-ul{
+    display: block;
+}
+
 
 
 
@@ -696,6 +727,7 @@ body{
 
 @media (max-width: 1000px){
     .Header-ul{
+        width: 100%;
         max-height: 0;
         display: flex;
         flex-direction: column; /* Siempre columna por defecto */
@@ -723,6 +755,7 @@ body{
         width: 100%;
         border-bottom: solid 1px var(--bg-hover);
         margin: 0 .5rem;
+        position: relative;
     }
     .Header-li:nth-child(1){
         padding-top: 1rem;
@@ -732,11 +765,33 @@ body{
         position: absolute;
         right: 1rem;
     }
-   
-   
-    
-    
+    .Sublist-ul {
+        display: none; /* Oculto por defecto */
+        background-color: #f9f9f9; /* Fondo del submenú */
+        width: 100%; /* Ocupa todo el ancho del menú principal */
+        padding: 0; /* Sin relleno adicional */
+        position: absolute; /* Posición relativa al <li> padre */
+        top: 100%; /* Coloca el submenú justo debajo del <li> padre */
+        left: 0; /* Alinea el submenú con el inicio del <li> padre */
+        z-index: 1;
+    }
+
+    .Sublist-ul.Open {
+        display: block; /* Se muestra al estar activo */
+    }
+
+    .Sublist-li {
+        padding: 0.5rem 1rem; /* Espaciado interno */
+        border-top: 1px solid #e0e0e0; /* Línea separadora entre elementos */
+        width: 100%; /* Ocupa todo el ancho */
+    }
+
+    .Sublist-li:hover {
+        background-color: var(--bg-hover); /* Fondo al pasar el ratón */
+        color: var(--bg-color); /* Cambia el color del texto */
+    }
 }
+   
 
 @media (max-width: 990px){
     .Services-grid{
